<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Marketplace Pesaing</string>
    <string name="splashscreen">Gambar Splash Screen</string>
    <string name="image_pralogin">Image Pra Login</string>
    <string name="txt_pre_login">Haloo! Sahabat Pesaing</string>
    <string name="title_activity_register">Daftar Sekarang</string>
    <string name="txt_pre_login2">Anda Sudah Memiliki Akun Ya?</string>
    <string name="txt_to_loginPedagang">Masuk</string>
    <string name="txt_hak_cipta">Hak Cipta Oleh PT. Bornewtech</string>
    <string name="txt_version">v0.1</string>
    <string name="name_string">Nama Lengkap</string>
    <string name="phone_num_string">No Hp/WA</string>
    <string name="email_string">Email Aktif</string>
    <string name="password_string">Kata Sandi</string>
    <string name="confirm_password">Konfirmasi Kata Sandi</string>
    <string name="text_punyaakun">Sudah Punya Akun?</string>
    <string name="login_button">Masuk</string>
    <string name="button_Google">Masuk Dengan Akun Google</string>
    <string name="title_Login">Masuk</string>
    <string name="text_milikakun">Anda Tidak Punya Akun</string>
    <string name="text_regis">Daftar</string>
    <string name="title_home">Beranda</string>
    <string name="title_barang_pedagang">Produk Mu</string>
    <string name="Maps">Peta</string>
    <string name="riwayat_pesanan">Pesanan</string>
    <string name="akun_pedagang">Akun Mu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_daftarkan_barang">Ingin Masukkan Barang?</string>
    <string name="text_mp_btn">Masukkan Barang</string>
    <string name="text_lapak">Lapak Ku</string>
    <string name="tombol_back">Tombol Kembali</string>
    <string name="profil_saya">Profil Ku</string>
    <string name="nama_pdg">Nama Pengguna</string>
    <string name="no_pdg">No Hp/WA Pengguna</string>
    <string name="tombol_edit">Tombol Edit</string>
    <string name="txt_akun_pdg">Akun Pengguna</string>
    <string name="riwayat_pesanan_pdg">Riwayat Pesanan</string>
    <string name="saldo_pdg">Saldo Ku</string>
    <string name="ganti_pass_pdg">Ganti Kata Sandi</string>
    <string name="logout_pdg">Keluar Dari Akun</string>
    <string name="daftarkan_produk">Masukkan Produk Kamu</string>
    <string name="inp_image">Ini Akan Menampilkan Gambar</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="nama_barang">Nama Produk</string>
    <string name="kategori">Kategori</string>
    <string name="satuan">Satuan</string>
    <string name="harga">Harga Produk</string>
    <string name="share_my_location">Bagikan Lokasi Saya Sekarang</string>
    <string name="inp_product">Masukkan</string>
    <string name="nameproduct">Nama Produk</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="google_maps_api_key">AIzaSyCR4ayz7SHwNi36uHScjg4F3eieOt5PYcA</string>
    <string name="lupa_pass">Ganti Kata Sandi</string>
    <string name="stokBarang">Stok Produk</string>
    <string name="inp_harga">Harga</string>
    <string name="inp_stok">Stok</string>
    <string name="hapus_produk">Hapus</string>
    <string name="update_produk">Edit</string>
    <string name="edit_produk">Edit Produk</string>
    <string name="inp_product_name">Nama Produk</string>
    <string name="btn_update">Konfirmasi</string>
    <string name="btn_delete">Konfirmasi</string>
    <string name="delete_produk">Hapus Produk</string>
    <string name="ubah_profil">Perbarui Profil</string>
    <string name="foto_profil">Foto profil mu</string>
    <string name="pas_foto">Pasang foto kamu disini</string>
    <string name="tambah_foto">Tambah foto profil mu</string>
    <string name="nameuser">Nama Lengkap</string>
    <string name="noHpUser">No Hp/Wa</string>
    <string name="noHpuser">Nomor Hp/Wa Aktif</string>
    <string name="alamatuser">Alamat Lengkap</string>
    <string name="alamatUser">Alamat Asli</string>
    <string name="simpan">Simpan</string>
    <string name="upload">Unggah Gambar</string>
    <string name="preview_addPhoto">Preview Add Photo</string>
    <string name="detailBarang">Detail Barang</string>
    <string name="hargaBarang">Harga Produk</string>
    <string name="stokbarang">Stok Barang</string>
    <string name="namaBarang">Nama Produk</string>
    <string name="currentLocation">Lokasi Sekarang</string>
    <string name="upd_Location">Perbarui Lokasi</string>
    <string name="kelilingYuk">Keliling Yukk</string>
    <string name="home">Beranda</string>
    <string name="keranjang">Akan Datang</string>
    <string name="orderan">Pesanan</string>
    <string name="akun_pengguna">Profil</string>
    <string name="welcome">Selamat Datang</string>
    <string name="welcome2">Mau Belanja Apa Hari Ini?</string>
    <string name="new_order">Pesanan Baru Nih!</string>
    <string name="otw">Pedagang sedang OTW..</string>
    <string name="list_of_category">List Kategori</string>
    <string name="best_seller">Produk Unggulan</string>
    <string name="list_of_best_seller">List Best Seller</string>
    <string name="namaPedagang">Nama Pedagang</string>
    <string name="statusPedagang">Status Terkini</string>
    <string name="lokasiPedagang">Lokasi Terkini</string>
    <string name="masukKeranjang">Masukkan Ke Keranjang</string>
    <string name="jumlahbarang">Jumlah Barang</string>
    <string name="alamat_string">Alamat Lengkap</string>
</resources>