<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btn_profil"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.profil.Profil">

        <!-- TODO: Update blank fragment layout -->

        <ImageView
            android:id="@+id/back_to_DP"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/tombol_back" />

        <TextView
            android:id="@+id/profil_pdg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="108dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/profil_saya"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.242"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_user"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="70dp"
            android:src="@drawable/ic_baseline_circle_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/nama_pengguna"
            android:layout_width="188dp"
            android:layout_height="27dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="46dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/nama_pdg"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/img_user"
            app:layout_constraintTop_toTopOf="@+id/profil_pdg" />

        <TextView
            android:id="@+id/no_pengguna"
            android:layout_width="187dp"
            android:layout_height="28dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/no_pdg"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/img_user"
            app:layout_constraintTop_toBottomOf="@+id/nama_pengguna" />

        <ImageButton
            android:id="@+id/edit_profil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:background="@drawable/baseline_edit_24"
            android:contentDescription="@string/tombol_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.719"
            app:layout_constraintStart_toEndOf="@+id/nama_pengguna"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/txt_akun_pdg"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_user" />

        <TextView
            android:id="@+id/riwayat_pesanan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/riwayat_pesanan_pdg"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:gravity="center|left"
            android:paddingLeft="110dp"
            android:background="@drawable/pesanan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text1" />

        <TextView
            android:id="@+id/keranjang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/keranjang"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:gravity="center|left"
            android:paddingLeft="110dp"
            android:background="@drawable/pesanan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/riwayat_pesanan" />

        <TextView
            android:id="@+id/btn_pembayaran"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/saldo_pdg"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:gravity="center|left"
            android:paddingLeft="110dp"
            android:background="@drawable/metode_pemabayaran"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/keranjang" />

        <TextView
            android:id="@+id/btn_ganti_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/ganti_pass_pdg"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:gravity="center|left"
            android:paddingLeft="110dp"
            android:background="@drawable/ganti_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_pembayaran" />

        <TextView
            android:id="@+id/btn_logout_pdg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/logout_pdg"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:gravity="center|left"
            android:paddingLeft="110dp"
            android:background="@drawable/logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_ganti_password" />

<!--        <TextView-->
<!--            android:id="@+id/lang_set"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="50dp"-->
<!--            android:layout_marginEnd="30dp"-->
<!--            android:layout_weight="1"-->
<!--            android:fontFamily="@font/roboto_medium"-->
<!--            android:gravity="end"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="18sp"-->
<!--            app:drawableEndCompat="@drawable/baseline_keyboard_arrow_right_24"-->
<!--            app:drawableTint="@color/black"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/btn_logout_pdg"-->
<!--            tools:text="@string/ganti_bahasa" />-->
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>